--- a/somfy-protexial-io-proxy/config.json
+++ b/somfy-protexial-io-proxy/config.json
@@ -4,8 +4,8 @@
   "slug": "spiop",
   "description": "Expose a REST API to manage Somfy Protexial IO, acting like a proxy",
   "arch": [ "armhf", "armv7", "aarch64", "amd64", "i386" ],
-  "startup": "before",
-  "auto_uart": true,
+  "startup": "services",
+  "uart": true,
   "ports": {
     "80/tcp": 8093
   },
